--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language: rust
+
 addons:
   apt:
     packages:
@@ -5,7 +7,7 @@ addons:
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
-language: rust
+      - libudev-dev
 rust:
   - nightly
   - beta
@@ -20,24 +22,19 @@ matrix:
   allow_failures:
     - rust: beta
     - rust: nightly
-cache:
-  apt: true
-  rust-download: true
-  directories:
-    - $TRAVIS_BUILD_DIR/target
-    - ~/.cargo
 notifications:
   email:
     on_success: never
 
-# This requires the old travis
-#after_success: |
-#  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
-#  tar xzf master.tar.gz &&
-#  mkdir kcov-master/build &&
-#  cd kcov-master/build &&
-#  cmake .. &&
-#  make &&
-#  sudo make install &&
-#  cd ../.. &&
-#  kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/decode_ceph--*;
+before_script:
+  - pip install 'travis-cargo<0.2' --user && export PATH=$HOME/.local/bin:$PATH
+
+script:
+  - |
+      travis-cargo build &&
+      travis-cargo test
+
+after_success:
+  - travis-cargo coveralls --no-sudo
+
+sudo: false
